--- a/frontend/src/common/components/Navbar/styles.css
+++ b/frontend/src/common/components/Navbar/styles.css
@@ -8,7 +8,7 @@ img {
 .navbar {
 	border: 0;
 	border-radius: 0;
-	background: linear-gradient(to right, #333333, rgb(65, 60, 60));
+	background: linear-gradient(to right, #1d1d1d, rgb(31, 29, 29));
 }
 
 .navbar-header {
