--- a/frontend/src/pages/match/styles.css
+++ b/frontend/src/pages/match/styles.css
@@ -1,4 +1,5 @@
-.last-stats-box {
-  height: 325px;
-  border: 1px solid black;
+.stats-box {
+  height: 300px;
+  border: 2.5px solid black;
+  margin: 25px 10px 0px 32px;
 }
